# serverdeck

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-build.yml
src/: App.tsx  authFlow.ts  i18n.ts  ipc.ts  main.tsx  metrics.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  ssh.rs  term.rs  vault.rs
src/components/: AuthDialogs.tsx  Dashboard.tsx  EmptyState.tsx  Explorer.tsx  FilesView.tsx  ImportModal.tsx  Overview.tsx  Palette.tsx  ServerModal.tsx  SettingsModal.tsx  Sidebar.tsx  SnippetsView.tsx  TabBar.tsx  TerminalPane.tsx  Toasts.tsx  UpdateBanner.tsx
