[package]
name = "nimbus"
version = "0.2.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "rsa", "ed25519", "encryption"] }
rsa = { version = "0.9", features = ["pem"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
